# cn24

./: .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTORS  LICENSE  README.md  compile-and-test.sh  index.html  logtocsv_multiclass.sh  params.json
ci/: install-clblas.sh
configurations/: facade1.cn24  facade1.net  kitti.net  kitti1.cn24  kitti1.net  kitti2.net  kitti_um_road.set
debian/: cn24-dev.dirs  cn24.dirs  cn24.install  cn24.substvars  control  files
distribution/: build-package.sh
distribution/debian/: changelog  cn24.install  rules
distribution/ubuntu-deb/: Dockerfile  build-package.sh
distribution/ubuntu-deb/debian/: changelog  cn24-dev.install  control  copyright
distribution/ubuntu-deb/scripts/: build-package.sh
distribution/windows/: README.md
distribution/windows/inno/: cn24.iss
distribution/windows/msys/: .gitignore  README.md  build-packages.sh  runtime-dlls
doc/: LICENSE-cargo  MANUAL.md
docs/: Makefile  conf.py  datastruct.rst  datastruct_format.rst  datastruct_hierarchy.rst  index.rst  intro.rst  layertypes.rst  library.rst  make.bat  networks.rst  shell.rst
documents/: 2fold_confusion_matrix.ods
example/: kitti.net  kitti_pretrained.Tensor  kitti_um_road.set  labelmefacade.net  labelmefacade.set  lmf_pretrained.Tensor  mnist_dataset.json  mnist_net.json  toy_dataset.json  toy_net.json  toy_net.net  training_script
example/toy/: TOY.Tensor  image.xcf  label.xcf  labels  toy.set  toy.xcf
example/toy/nets/: toy01  toy02  toy03
include/: cn24.h
include/cn24/factory/: ConfigurableFactory.h  Factory.h  JSONDatasetFactory.h  JSONNetGraphFactory.h  JSONOptimizerFactory.h  SkipLayerNetworkFactory.h
include/cn24/math/: AdamOptimizer.h  Optimizer.h  SGDOptimizer.h  TensorMath.h
include/cn24/net/: AdvancedMaxPoolingLayer.h  BinaryStatLayer.h  BundleInputLayer.h  CVLabeledDataLayer.h  ConcatLayer.h  ConcatenationLayer.h  DropoutLayer.h  (+44 more)
include/private/: CLHelper.h  MKLHelper.h  NKContext.h  Segmentation.h
kernels/: advmaximumPooling.cl  applyMask.cl  biasGradient.cl  biasedConvolution.cl  biasedMatrixVector.cl  crossCorrelation.cl  foldWeights.cl  fullConvolution.cl  im2col.cl  matrixMatrix.cl  maximumPooling.cl  nonLinearFunctions.cl  scaling.cl  setValue.cl  sms.cl
licenses/: LICENSE-yolo
models/: kitti2.Tensor
parser/: Makefile  gnet.l  gnet.y
scripts/: calc.sh  calcAll.sh  calcShort.sh  download_examples.sh  logtocsv_multiclass.sh  runCV.sh  runTestDistributed.sh  runexperiments.sh  runexperimentswithmodel.sh
scripts/converters/: convertCaffeMeanImage.py  convertCaffeToCN24.py
shell/: Data.cpp  Experiment.cpp  Model.cpp  Network.cpp  Predict.cpp  ShellState.cpp  ShellState.h  Test.cpp  Train.cpp  cn24-shell.cpp
src/factory/: CNetAFactory.cpp  CNetMFactory.cpp  CNetNFactory.cpp  CNetOFactory.cpp  CNetPFactory.cpp  CNetQFactory.cpp  CNetRFactory.cpp  CNetSFactory.cpp  ConfigurableFactory.cpp  Factory.cpp  JSONDatasetFactory.cpp  JSONNetGraphFactory.cpp  JSONOptimizerFactory.cpp  SkipLayerNetworkFactory.cpp
src/math/: AdamOptimizer.cpp  Optimizer.cpp  SGDOptimizer.cpp  TensorMath.cpp
src/net/: ActivationFunctions.cpp  AdvancedMaxPoolingLayer.cpp  BinaryStatLayer.cpp  BundleInputLayer.cpp  CVLabeledDataLayer.cpp  ConcatLayer.cpp  ConcatenationLayer.cpp  ConfusionMatrixLayer.cpp  ConvolutionLayer.cpp  CrossEntropyErrorLayer.cpp  DatasetInputLayer.cpp  DetectionStatLayer.cpp  DropoutLayer.cpp  ErrorLayer.cpp  FlattenLayer.cpp  FullyConnectedLayer.cpp  GradientAccumulationLayer.cpp  HMaxActivationFunction.cpp  InputDownSamplingLayer.cpp  InputLayer.cpp  LayerFactory.cpp  LocalResponseNormalizationLayer.cpp  MaxPoolingLayer.cpp  MultiClassErrorLayer.cpp  Net.cpp  NetGraph.cpp  NonLinearityLayer.cpp  PreprocessingLayer.cpp  ResizeLayer.cpp  S2CVLabeledDataLayer.cpp  S2SplitLabeledDataLayer.cpp  SegmentSetInputLayer.cpp  SimpleLabeledDataLayer.cpp  SimpleLayer.cpp  SparsityLossLayer.cpp  SparsityReLULayer.cpp  SpatialPriorLayer.cpp  StatLayer.cpp  SumLayer.cpp  Trainer.cpp  (+4 more)
src/shell/: Model.cpp  Network.cpp  Predict.cpp  ShellState.cpp  Test.cpp  Train.cpp
src/util/: BoundingBox.cpp  Bundle.cpp  CSVStatSink.cpp  ClassManager.cpp  Colorize.cpp  CompressedTensor.cpp  CompressedTensorStream.cpp  ConfigParsing.cpp  FloatTensorStream.cpp  GradientTester.cpp  ILSVRCDataset.cpp  Init.cpp  JPGLoader.cpp  JPGUtil.cpp  JSONDataset.cpp  JSONDetectionDataset.cpp  JSONNetGraphFactory.cpp  JSONSegmentationDataset.cpp  KITTIData.cpp  ListTensorStream.cpp  MNISTDataset.cpp  MemoryMappedFile.cpp  MemoryMappedTar.cpp  NKContextGeneric.cpp  NKContextX11.cpp  PNGLoader.cpp  PNGUtil.cpp  PathFinder.cpp  Segment.cpp  SegmentSet.cpp  Segmentation.cpp  StatAggregator.cpp  Tensor.cpp  TensorRegistry.cpp  TensorStream.cpp  TensorStreamDataset.cpp  TensorStreamPatchDataset.cpp  TensorViewer.cpp  Test.cpp  VideoUtil.cpp
stylesheets/: stylesheet.css
template/: header
tests/: AlwaysPass.cpp  BilinearInterpolation.cpp  BoundingBoxCalculations.cpp  ClassManager.cpp  GradientSanity.cpp  LayerFactoryConfigurationExtraction.cpp  LayerFactoryLayerTypeExtraction.cpp  LayerFactorySeedInjection.cpp  LayerFactoryValidation.cpp  LossLayerTest.cpp  MemoryMappedFile.cpp  Optimizer.cpp  SimpleLayerTest.cpp  SingleLayerGradientTest.cpp  TensorSerialization.cpp
tools/: UIInfo.cpp  classifyImage.cpp  classifyImageLabelMeFacade.cpp  cn24-shell.cpp  compressTensorStream.cpp  convertKITTI.cpp  convertLabelMeFacade.cpp  convertMNIST.cpp  cutTensorStream.cpp  inspectNetwork.cpp  inspectNetworkLabelMeFacade.cpp  listOpenCLDevices.cpp  makeCompressedTensorStream.cpp  makeTensorStream.cpp  networkGraph.cpp  paramDiff.cpp  paramTool.cpp  pathFinder.cpp  predictImage.cpp  predictWebcam.cpp  runBenchmark.cpp  segmentTool.cpp  tensorStreamStats.cpp  tensorStreamTool.cpp  tensorTool.cpp  testBLAS.cpp  testCompression.cpp  testConfigurableFactory.cpp  testConvMNIST.cpp  testLocalizedError.cpp  testMNIST.cpp  testNetwork.cpp  testOpenCL.cpp  testPNGLoader.cpp  testSimpleNet.cpp  testSimpleNetSplit.cpp  testTar.cpp  testTensor.cpp  trainNetwork.cpp  trainNetworkCV.cpp  (+2 more)
(+38 files in other folders)
